[package]
name = "reflet"
version = "0.1.0"
authors = ["Daniel David Sansano Surla <s3729065@student.rmit.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["alakkazam", "sdhttp"]

[dependencies]
actix-http = "2.2.0"
actix-service = "2.0.0"
actix-web = "3.3.2"
clap = "2.33.3"
futures = "0.3.15"
kube = "0.55.0"
kube-runtime = "0.55.0"
k8s-openapi = "0.11.0"
serde = "1.0.126"
