[package]
name = "reflet"
version = "0.1.0"
authors = ["Daniel David Sansano Surla <s3729065@student.rmit.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspaces]
members = ["alakkazam"]

[dependencies]
actix-http = "2.2.0"
actix-service = "2.0.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"

clap = "2.33.3"
futures = "0.3.15"

kube = { version = "0.56.0", default-features = false, features = ["client", "rustls-tls"] }
kube-runtime = { version = "0.56.0" }
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }

serde = "1.0.126"