[package]
name = "reflet"
version = "0.1.0"
authors = ["Daniel David Sansano Surla <s3729065@student.rmit.edu.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["alakkazam"]

[dependencies]
actix-http = "2.2.0"
actix-service = "2.0.0"
actix-rt = "2.2.0"
actix-web = "3.3.2"

bollard = "0.10.1"
clap = "2.33.3"
futures = "0.3.15"
serde = "1.0.126"